fix how to play collapse effect

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -7556,6 +7556,9 @@ ul.sport {
   } */
 
 /* } */
+.size-accordion{
+    min-width:750px;
+}
 @media (min-width: 992px), (max-width: 1140px) {
     .btn-spacing {
         word-spacing: 1px;
